@@ -1,3 +1,5 @@
+17.dec (og)
+      - exportly: stafftext and dynamics on same note.
 16.dec (ws)
       - fix: Add copyright text crash
       - all accidentals can now have brackets: drag bracket symbol on accidental
